# Python-Interpreter-2023

./: .gitignore  CMakeLists.txt  readme.md
Prework/: README.md  calc.h  test.cpp  visitor.h
docs/: antlr_guide.md  grammar.md  implementation_details.md  suggestions.md  workflow_details.md
resources/: Python3Lexer.g4  Python3Parser.g4  antlr-python-tool-linux-amd64.deb  antlr4-runtime_4.13.1_amd64.deb  gen.sh  lexer.md
src/: Evalvisitor.h  main.cpp
